Added GET method

--- a/Section 5 - Advance HTML/register.html
+++ b/Section 5 - Advance HTML/register.html
@@ -2,7 +2,7 @@
 <html>
     <title>Register Page</title>
     <body>
-        <form>
+        <form method="GET">
             First Name:<input type="text" name="firstname" required><br>
             Last Name:<input type="text" name="lastname" required><br>
             Email: <input type="email" name="email" required><br>
