Added div and span

--- a/Section 5 - Advance HTML/register.html
+++ b/Section 5 - Advance HTML/register.html
@@ -2,26 +2,29 @@
 <html>
     <title>Register Page</title>
     <body>
-        <form method="GET">
-            First Name:<input type="text" name="firstname" required><br>
-            Last Name:<input type="text" name="lastname" required><br>
-            Email: <input type="email" name="email" required><br>
-            Password: <input type="password" name="password" minlength="5"><br>
-            Birthday: <input type="date" name="birthday" required><br>
-            Gender: <br>
-                Male <input type="radio" name="gender" value="male"><br>
-                Female <input type="radio" name="gender" value="female"><br>
-                Other <input type="radio" name="gender" value="other"><br>
-            Pets: <br>
-                Cats <input type="checkbox" name="cats" ><br>
-                Dogs <input type="checkbox" name="dogs" ><br>
-            Cars: <br>
-            <select name="cars" id="cars">
-                <option value="mercedez">Mercedez</option>
-                <option value="bmw">BMW</option>
-            </select><br>
-            <input type="submit">
-            <input type="reset">    
-        </form>
+        <!-- Get request to the form  -->
+        <div>
+            <form method="GET">
+                First Name:<input type="text" name="firstname" required><br>
+                Last Name:<input type="text" name="lastname" required><br>
+                Email: <input type="email" name="email" required><br>
+                Password: <input type="password" name="password" minlength="5"><br>
+                Birthday: <input type="date" name="birthday" required><br>
+                Gender: <br>
+                    Male <input type="radio" name="gender" value="male"><br>
+                    Female <input type="radio" name="gender" value="female"><br>
+                    Other <input type="radio" name="gender" value="other"><br>
+                Pets: <br>
+                    Cats <input type="checkbox" name="cats" ><br>
+                    Dogs <input type="checkbox" name="dogs" ><br>
+                Cars: <br>
+                <select name="cars" id="cars">
+                    <option value="mercedez">Mercedez</option>
+                    <option value="bmw">BMW</option>
+                </select><br>
+                <input type="submit">
+                <input type="reset">    
+            </form>
+        </div>
     </body>
 </html>
